--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: php
 
 php:
-  - 5.3
+#  - 5.3
   - 5.4
   - 5.5
 
 env:
   - MONGO_VERSION=1.2.12
-  - MONGO_VERSION=1.3.2
+#  - MONGO_VERSION=1.3.2
   - MONGO_VERSION=1.4.4
 
 services: mongodb
