Implemented BSON code(ws) types

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
             { "MongoId": "src/MongoId.php" },
             { "MongoInt32": "src/MongoInt32.php" },
             { "MongoInt64": "src/MongoInt64.php" },
+            { "MongoCode": "src/MongoCode.php" },
             { "MongoException": "src/MongoException.php" }
         ],
         "files": [
