Minimum viable implementations of MongoClient, MongoDB, MongoCollection and MongoCursor BaseTest

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
             { "Mongofill\\Bson": "src/Mongofill/Bson.php" },
             { "Mongofill\\Protocol": "src/Mongofill/Protocol.php" },
             { "MongoClient": "src/MongoClient.php" },
+            { "MongoDB": "src/MongoDB.php" },
+            { "MongoCollection": "src/MongoCollection.php" },
+            { "MongoCursor": "src/MongoCursor.php" },
             { "MongoId": "src/MongoId.php" },
             { "MongoInt32": "src/MongoInt32.php" },
             { "MongoInt64": "src/MongoInt64.php" },
