Updated authors README mentions compat/not-passing branch

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
         {
             "name": "Jakub Husák",
             "email": "husak.j@gmail.com"
+        },
+        {
+            "name": "thawkins"
         }
     ],
     "autoload": {
