--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
             { "Mongofill\\Util": "src/Mongofill/Util.php" },
             { "Mongofill\\Bson": "src/Mongofill/Bson.php" },
             { "Mongofill\\Protocol": "src/Mongofill/Protocol.php" },
+            { "MongoBinData": "src/MongoBinData.php" },
             { "MongoClient": "src/MongoClient.php" },
             { "MongoDB": "src/MongoDB.php" },
             { "MongoDate": "src/MongoDate.php" },
