--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ services: mongodb
 before_script:
   - composer install --dev --no-interaction --prefer-source
 
-
 notifications:
-  irc: "chat.freenode.net#mongofill"
+  irc:
+    channels:
+      - "chat.freenode.net#mongofill"
+    template:
+      - "%{repository} (%{commit}) : %{message} (%{author})"
+      - "Build details: %{build_url} (%{duration})" 
