--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
             { "MongoDate": "src/MongoDate.php" },
             { "MongoCollection": "src/MongoCollection.php" },
             { "MongoCursor": "src/MongoCursor.php" },
+            { "MongoCursorException": "src/MongoCursorException.php" },
             { "MongoId": "src/MongoId.php" },
             { "MongoRegex": "src/MongoRegex.php" },
             { "MongoInt32": "src/MongoInt32.php" },
