--- a/composer.json
+++ b/composer.json
@@ -28,27 +28,32 @@
             { "Mongofill\\Util": "src/Mongofill/Util.php" },
             { "Mongofill\\Bson": "src/Mongofill/Bson.php" },
             { "Mongofill\\Protocol": "src/Mongofill/Protocol.php" },
+            { "Mongo": "src/Mongo.php" },
             { "MongoBinData": "src/MongoBinData.php" },
             { "MongoClient": "src/MongoClient.php" },
-            { "Mongo": "src/Mongo.php" },
+            { "MongoCode": "src/MongoCode.php" },
+            { "MongoCollection": "src/MongoCollection.php" },
+            { "MongoConnectionException": "src/MongoConnectionException.php" },
+            { "MongoCursor": "src/MongoCursor.php" },
+            { "MongoCursorException": "src/MongoCursorException.php" },
+            { "MongoCursorTimeoutException": "src/MongoCursorTimeoutException.php" },
             { "MongoDB": "src/MongoDB.php" },
             { "MongoDBRef": "src/MongoDBRef.php" },
             { "MongoDate": "src/MongoDate.php" },
-            { "MongoCollection": "src/MongoCollection.php" },
-            { "MongoCursor": "src/MongoCursor.php" },
-            { "MongoCursorException": "src/MongoCursorException.php" },
-            { "MongoId": "src/MongoId.php" },
-            { "MongoRegex": "src/MongoRegex.php" },
-            { "MongoInt32": "src/MongoInt32.php" },
-            { "MongoInt64": "src/MongoInt64.php" },
-            { "MongoCode": "src/MongoCode.php" },
             { "MongoException": "src/MongoException.php" },
-            { "MongoLog": "src/MongoLog.php" },
-            { "MongoTimestamp": "src/MongoTimestamp.php" },
             { "MongoGridFS": "src/MongoGridFS.php" },
             { "MongoGridFSFile": "src/MongoGridFSFile.php" },
             { "MongoGridFSException": "src/MongoGridFSException.php" },
-            { "MongoGridFSCursor": "src/MongoGridFSCursor.php" }
+            { "MongoGridFSCursor": "src/MongoGridFSCursor.php" },
+            { "MongoId": "src/MongoId.php" },
+            { "MongoInt32": "src/MongoInt32.php" },
+            { "MongoInt64": "src/MongoInt64.php" },
+            { "MongoLog": "src/MongoLog.php" },
+            { "MongoMaxKey": "src/MongoMaxKey.php" },
+            { "MongoMinKey": "src/MongoMinKey.php" },
+            { "MongoRegex": "src/MongoRegex.php" },
+            { "MongoResultException": "src/MongoResultException.php" },
+            { "MongoTimestamp": "src/MongoTimestamp.php" }
         ],
         "files": [
             "src/functions.php"
