Provide ext-mongo in composer.json
Doctrine mongodb requires the ext-mongo extension (https://github.com/doctrine/mongodb/blob/master/composer.json)

This fixes the requirements. However I'm not sure about the version I should use instrad of "*".

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
             "homepage": "https://github.com/mongofill/mongofill/graphs/contributors"
         }
     ],
+    "provide": {
+        "ext-mongo": "*"
+    },
     "require-dev": {
         "athletic/athletic": "dev-master"
     },
