--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "ext-mongo": "*"
     },
     "require-dev": {
-        "athletic/athletic": "dev-master"
+        "athletic/athletic": "dev-master",
+        "phpunit/phpunit": "~4.7.7"
     },
     "autoload": {
         "classmap": [
