Revert "composer prep"
This reverts commit d6bb0a477f614850e022ac5b385b3b318a650900.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "fiskie/mongofill",
+    "name": "mongofill/mongofill",
     "description": "Polyfill of PECL Mongo extension",
     "minimum-stability": "stable",
     "license": "MIT",
